--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4> Jr. Java Developer </h4>
+              <h4>  Java Developer Intern </h4>
               <h5>2022 - 2023</h5>
               <p><em>Rentmart IT Solutions, Nagpur, Maharashtra ,India</em></p>
               <ul>
