--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4> Java Developer Intern </h4>
-              <h5>2022 - 2023</h5>
+              <h4> Java Developer </h4>
+              <h5>Jan-2022 - Present</h5>
               <p><em>Gharkul Associates, Nagpur, Maharashtra ,India</em></p>
               <ul>
                 <li>Deveoping Backend Application Interfaces according to Client requirements</li>
